force-app/main/default/objects/Discount__c/Discount__c.object-meta.xml
<CustomObject>
    <description>Created By: Dylan Bowman (RC) 
Department: Stripe
Purpose: Storing coupon data from Stripe</description>
    <label>Discount</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Discount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>