force-app/main/default/objects/Discount__c/fields/Amount_Off__c.field-meta.xml
<CustomField>
    <fullName>Amount_Off__c</fullName>
    <label>Amount Off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>