force-app/main/default/objects/Discount__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Forever</fullName>
                <default>true</default>
                <label>Forever</label>
            </value>
            <value>
                <fullName>Once</fullName>
            </value>
            <value>
                <fullName>Repeating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>