force-app/main/default/objects/Discount__c/fields/Duration_In_Months__c.field-meta.xml
<CustomField>
    <fullName>Duration_In_Months__c</fullName>
    <label>Duration In Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>