force-app/main/default/objects/Discount__c/fields/Gateway__c.field-meta.xml
<CustomField>
    <fullName>Gateway__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Gateway</label>
    <referenceTo>Gateway__c</referenceTo>
    <relationshipLabel>Discounts</relationshipLabel>
    <relationshipName>Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>