force-app/main/default/objects/Discount__c/fields/Gift_Membership__c.field-meta.xml
<CustomField>
    <fullName>Gift_Membership__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gift Membership</label>
    <type>Checkbox</type>
</CustomField>