force-app/main/default/objects/Discount__c/fields/Purchaser_Email__c.field-meta.xml
<CustomField>
    <fullName>Purchaser_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Purchaser Email</label>
    <type>Email</type>
</CustomField>