force-app/main/default/objects/Discount__c/fields/Purchaser_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Purchaser_First_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Purchaser First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>