force-app/main/default/objects/Discount__c/fields/Redeem_By__c.field-meta.xml
<CustomField>
    <fullName>Redeem_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Redeem By</label>
    <type>DateTime</type>
</CustomField>