force-app/main/default/objects/Discount__c/fields/Times_Redeemed__c.field-meta.xml
<CustomField>
    <fullName>Times_Redeemed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Times Redeemed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>