force-app/main/default/objects/Discount__c/validationRules/Cannot_Edit_After_Insertion.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_After_Insertion</fullName>
    <active>false</active>
    <description>In order to keep data in Sync with Stripe, data cannot be edited after it is inserted.</description>
    <errorConditionFormula>OR(
ISCHANGED(Amount_Off__c),
ISCHANGED(Code__c),
ISCHANGED(Duration__c),
ISCHANGED(Duration_In_Months__c),
ISCHANGED(Max_Redemptions__c),
ISCHANGED(Redeem_By__c),
ISCHANGED(Name)
)</errorConditionFormula>
    <errorMessage>A Discount cannot be edited once it is created.</errorMessage>
</ValidationRule>