force-app/main/default/objects/Discount__c/validationRules/Duration_In_Months_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Duration_In_Months_Required</fullName>
    <active>true</active>
    <description>If Duration is &quot;Repeating,&quot; there must be a Duration In Months.</description>
    <errorConditionFormula>AND(
TEXT(Duration__c) == &apos;Repeating&apos;,
OR(ISBLANK(Duration_In_Months__c), Duration_In_Months__c &lt;= 0)
)</errorConditionFormula>
    <errorDisplayField>Duration_In_Months__c</errorDisplayField>
    <errorMessage>A positive Duration In Months is required if Duration is &quot;Repeating.&quot;</errorMessage>
</ValidationRule>