force-app/main/default/objects/Discount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>Amount_Off__c</columns>
    <columns>Duration__c</columns>
    <columns>Valid__c</columns>
    <columns>Times_Redeemed__c</columns>
    <columns>Max_Redemptions__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>